list profiles and filter them
